[package]
name = "libtermuxadb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "termuxadb"
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0.66"
env_logger = "0.10.0"
libc = "0.2.138"
log = "0.4.17"
nix = "0.26.1"
once_cell = "1.16.0"
rand = "0.8.5"
rusb = { git = "https://github.com/nohajc/rusb.git", branch = "master", default-features = false }
sendfd = "0.4.3"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
which = "4.3.0"
